# cuddly-waffle

./: .gitignore  .seo_audit.env  AGENTS.md  pyproject.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  MODEL_HANDOFF.md  PLAN.md  PLAN_STAGE_1_5.md  PLAN_STAGE_1_6B.md  PLAN_STAGE_1_6F.md  PLAN_STAGE_1_6H.md  PLAN_STAGE_1_6I.md  STATUS.md  USAGE.md
scripts/: start_dashboard.sh
seo_audit/: __init__.py  __main__.py  ai_visibility.py  citation.py  classify.py  cli.py  config.py  crawl_queue.py  crawler.py  dashboard.py  dashboard_ui.html  diffing.py  discovery.py  extract.py  frontier.py  governance_matrix.py  gsc_analytics.py  gsc_inspection.py  http_utils.py  issues.py  job_queue.py  lighthouse.py  linkgraph.py  logging_utils.py  media_images.py  media_video.py  models.py  offsite_commoncrawl.py  page_controls.py  performance.py  personas.py  policies.py  preview_controls.py  queue_worker.py  render.py  reporting.py  resolution.py  robots.py  scheduler.py  schema_graph.py  (+13 more)
seo_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ai_visibility.py  test_classify.py  test_crawl_queue.py  test_crawler_concurrency.py  test_crawler_policy.py  test_dashboard.py  test_diffing.py  test_discovery.py  test_extract.py  test_extract_malformed.py  test_frontier.py  test_http_utils.py  test_incremental_crawl.py  test_integration_pipeline.py  test_internal_link_policy.py  test_issues.py  test_job_queue.py  test_js_render_pipeline.py  test_lighthouse.py  test_linkgraph.py  test_offsite_commoncrawl.py  test_offsite_reporting_dashboard.py  (+23 more)
(+55 files in other folders)
